--- a/app/src/main/res/layout/dialog_alert_home_exit.xml
+++ b/app/src/main/res/layout/dialog_alert_home_exit.xml
@@ -17,7 +17,7 @@
         app:layout_constraintStart_toStartOf="parent">
 
         <TextView
-            android:id="@+id/exitDescrizione"
+            android:id="@+id/comicsTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/confirm_exit"
@@ -39,7 +39,7 @@
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/exitDescrizione" />
+            app:layout_constraintTop_toBottomOf="@id/comicsTitle" />
 
         <Button
             android:id="@+id/btnCancel"
